{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 34,
  "lineage": "f630ab7c-e3e5-a797-a3dc-642afe917142",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203261016281:vpc/vpc-47a06c2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-56be153d",
            "default_route_table_id": "rtb-6578ed0e",
            "default_security_group_id": "sg-65250102",
            "dhcp_options_id": "dopt-a34debc8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-47a06c2c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-6578ed0e",
            "owner_id": "203261016281",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "myapp-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:203261016281:loadbalancer/myapp-elb",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "myapp-elb-919064247.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 3,
                "interval": 60,
                "target": "HTTP:3000/",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "myapp-elb",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "myapp-elb",
            "security_groups": [
              "sg-05aba2cb68061a9ac"
            ],
            "source_security_group": "203261016281/myapp-elb",
            "source_security_group_id": "sg-05aba2cb68061a9ac",
            "subnets": [
              "subnet-08bb893d54cd312d3",
              "subnet-098beede36473b08b"
            ],
            "tags": {
              "Name": "myapp-elb"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.myapp-elb-securitygroup",
            "aws_subnet.main-public-1",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0736d9eb62e4dbacb",
            "owner_id": "203261016281",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0805edb137edbffee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09837b856d53868be",
            "owner_id": "203261016281",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0736d9eb62e4dbacb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0805edb137edbffee"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090f6bae51979697f",
            "route_table_id": "rtb-09837b856d53868be",
            "subnet_id": "subnet-08bb893d54cd312d3"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0679988c31b5ecb94",
            "route_table_id": "rtb-09837b856d53868be",
            "subnet_id": "subnet-098beede36473b08b"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0563394fbaa3b64ad",
            "route_table_id": "rtb-09837b856d53868be",
            "subnet_id": "subnet-09db71208a3078470"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203261016281:security-group/sg-0a9fb6672ae600a6f",
            "description": "security group for ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9fb6672ae600a6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05aba2cb68061a9ac"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs",
            "name_prefix": null,
            "owner_id": "203261016281",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0805edb137edbffee"
          },
          "dependencies": [
            "aws_security_group.myapp-elb-securitygroup",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myapp-elb-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203261016281:security-group/sg-05aba2cb68061a9ac",
            "description": "security group for ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05aba2cb68061a9ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myapp-elb",
            "name_prefix": null,
            "owner_id": "203261016281",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0805edb137edbffee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203261016281:subnet/subnet-051cb9cc5ccf233cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-051cb9cc5ccf233cb",
            "map_public_ip_on_launch": false,
            "owner_id": "203261016281",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0805edb137edbffee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203261016281:subnet/subnet-0e92958f2110a4e47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0e92958f2110a4e47",
            "map_public_ip_on_launch": false,
            "owner_id": "203261016281",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0805edb137edbffee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203261016281:subnet/subnet-0d5f92ac8515a0249",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0d5f92ac8515a0249",
            "map_public_ip_on_launch": false,
            "owner_id": "203261016281",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-0805edb137edbffee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203261016281:subnet/subnet-08bb893d54cd312d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08bb893d54cd312d3",
            "map_public_ip_on_launch": true,
            "owner_id": "203261016281",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0805edb137edbffee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203261016281:subnet/subnet-098beede36473b08b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-098beede36473b08b",
            "map_public_ip_on_launch": true,
            "owner_id": "203261016281",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0805edb137edbffee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203261016281:subnet/subnet-09db71208a3078470",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-09db71208a3078470",
            "map_public_ip_on_launch": true,
            "owner_id": "203261016281",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-0805edb137edbffee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:203261016281:vpc/vpc-0805edb137edbffee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb1ed7cb369f2182",
            "default_route_table_id": "rtb-0434a0151a441d193",
            "default_security_group_id": "sg-0f593d222c370f9eb",
            "dhcp_options_id": "dopt-a34debc8",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0805edb137edbffee",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0434a0151a441d193",
            "owner_id": "203261016281",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}